# opensampler

./: .gitignore  .gitmodules  Application.cpp  CMakeLists.txt  LICENSE  OSS-LICENSE  README.md  config.h
CMake/: CompilerOptions.cmake  FindFluidSynth.cmake  FindSfizz.cmake  PluginConfig.cmake
Core/: OSMPEngine.cpp
Core/Audio/: Audio.cpp
Graphic/: OSMPGui.cpp
Player/Drummer/: .gitignore  Cargo.toml  README.md  build.cmd  vite.config.ts
Player/Drummer/crates/osmpcore/: Cargo.toml
Player/Drummer/crates/osmpcore/sdk/: bench.rs  convertaudio.rs  loadjson.rs  main.rs  mkosmp.rs  pack.rs  packjson.rs  session.rs
Player/Drummer/crates/osmpcore/src/: lib.rs  sfzjson.rs
Player/Drummer/crates/osmpdsp/: Cargo.toml
Player/Drummer/host/: Cargo.toml
Player/Drummer/host/src/: main.rs  player.rs
Player/Drummer/scripts/: sfz2json.py
Player/Drummer/src/: App.tsx
Player/Drummer/src/components/: DrumView.tsx  FileBrowser.tsx  MidiSettings.tsx  OsmpBar.tsx  OsmpPadProps.tsx  PadGrid.tsx
Player/Drummer/src/lib/: audioEngine.ts
Player/Drummer/src/types/: osmp.ts
include/Core/: OSMPEngine.hpp
include/Core/Audio/: Audio.hpp
include/Graphic/: OSMPGui.hpp
